--- a/LayeredArchitectureExample.WebAPI/LayeredArchitectureExample.WebAPI.csproj
+++ b/LayeredArchitectureExample.WebAPI/LayeredArchitectureExample.WebAPI.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Business\LayeredArchitectureExample.Business.csproj" />
+    <ProjectReference Include="..\DataAccess\LayeredArchitectureExample.DataAccess.csproj" />
+    <ProjectReference Include="..\Entities\LayeredArchitectureExample.Entities.csproj" />
+    <ProjectReference Include="..\LayeredArchitectureExample.Core\LayeredArchitectureExample.Core.csproj" />
+  </ItemGroup>
+
 </Project>
