--- a/LayeredArchitectureExample.WebAPI/LayeredArchitectureExample.WebAPI.csproj
+++ b/LayeredArchitectureExample.WebAPI/LayeredArchitectureExample.WebAPI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Business\LayeredArchitectureExample.Business.csproj" />
     <ProjectReference Include="..\DataAccess\LayeredArchitectureExample.DataAccess.csproj" />
     <ProjectReference Include="..\Entities\LayeredArchitectureExample.Entities.csproj" />
