User, UserOperationClaim and OperationClaim object add core layer. appsettings update from TokenOptions

--- a/LayeredArchitectureExample.WebAPI/appsettings.json
+++ b/LayeredArchitectureExample.WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "tarik@gulyuva.com",
+    "Issuer": "tarik@gulyuva.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
