--- a/LayeredArchitectureExample.Core/LayeredArchitectureExample.Core.csproj
+++ b/LayeredArchitectureExample.Core/LayeredArchitectureExample.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
     <PackageReference Include="FluentValidation" Version="10.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
